content/sass/pages/post.scss
@use '../variables/type-vars'as *;
@use '../variables/colors'as *;
@use '../variables/misc'as *;

.post-title {
    $pattern-clr-dark: $clr-primary-900;
    $pattern-clr-light: $clr-primary-800;

    width: 100%;
    background: $clr-primary-300;
    padding: 4em;
    text-align: center;

    background: linear-gradient(324deg, $pattern-clr-dark 4%, transparent 4%) -70px 43px,
        linear-gradient(36deg, $pattern-clr-dark 4%, transparent 4%) 30px 43px,
        linear-gradient(72deg, $pattern-clr-light 8.5%, transparent 8.5%) 30px 43px,
        linear-gradient(288deg, $pattern-clr-light 8.5%, transparent 8.5%) -70px 43px,
        linear-gradient(216deg, $pattern-clr-light 7.5%, transparent 7.5%) -70px 23px,
        linear-gradient(144deg, $pattern-clr-light 7.5%, transparent 7.5%) 30px 23px,

        linear-gradient(324deg, $pattern-clr-dark 4%, transparent 4%) -20px 93px,
        linear-gradient(36deg, $pattern-clr-dark 4%, transparent 4%) 80px 93px,
        linear-gradient(72deg, $pattern-clr-light 8.5%, transparent 8.5%) 80px 93px,
        linear-gradient(288deg, $pattern-clr-light 8.5%, transparent 8.5%) -20px 93px,
        linear-gradient(216deg, $pattern-clr-light 7.5%, transparent 7.5%) -20px 73px,
        linear-gradient(144deg, $pattern-clr-light 7.5%, transparent 7.5%) 80px 73px;
    background-color: $pattern-clr-dark;
    background-size: 100px 100px;

    &__heading {
        color: $text-color-light;
    }
}

.post {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-wrap: wrap;
    column-gap: 5%;
    padding-block: var(--section-spacing-large);

}

.post {
    &__content {
        min-width: 0;
        flex: 9 0 min-content;

        @include apply-heading-top-margins;

        & > :first-child {
            margin-top: 0
        }

        h2 {
            font-size: $fs-900;
        }

        h3 {
            font-size: $fs-800;
        }
    }
}

.toc {
    display: flex;
    flex-direction: column;
    padding: 1em 2em 2em 0;
    position: sticky;
    left: 0;
    top: 0;
    min-height: 100vh;
    border-right: 1px solid $clr-primary-300;
    flex: 1 0 30%;

    &__title {
        font-size: var(--fs-responsive-h5);
    }

    &__list {
        font-size: $fs-300;

        li {
            list-style: none;
        }
    }

    &__item {
        margin-bottom: 12px;
        display: inline-block;
        font-size: $fs-300;
        font-size: 18px;
        font-weight: 600;
        transition: $transition-clr;

        &:hover {
            color: $clr-secondary
        }
    }

    @for $i from 1 through 6 {
        &__level-#{$i} {
            margin: 0;
            margin-left: ($i - 1) * 18px;
        }
    }
}


@media screen and (max-width:1000px) {

    .post {
        flex-direction: column;

        &__content {
            @for $i from 1 through 6 {
                h#{$i} {
                    font-size: var(--fs-responsive-h#{$i});
                }
            }
        }
    }

    .toc {
        position: static;
        min-height: auto;
        margin-inline: 0;
        border: none;
        background-color: $clr-primary-200;
        padding: 2em 2em 4em 2em;
        margin-bottom: clamp(40px, 10vh, 80px);
    }
}

